# tiny_heart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  game.c  game.h  main.c  play_state.c  title_state.c
frontends/apple/: ViewDelegate.swift  os_swift_interop.h  satin-Bridging-Header.h
frontends/apple/satin.xcodeproj/: project.pbxproj
frontends/apple/satin.xcodeproj/xcshareddata/xcschemes/: satin_mac.xcscheme
frontends/apple/satin_mac/: AppDelegate.swift  Info.plist  ViewController.swift
frontends/apple/satin_mac/Base.lproj/: Main.storyboard
frontends/web/: CMakeLists.txt  index.html  main.c
frontends/win32/: CMakeLists.txt  main.c
